# gimme-a-chance

./: .gitignore  CLAUDE.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
scripts/: README.md  build.ps1  dev-sherpa.ps1  dev.ps1  fetch-models.ps1  heap_ab_compare.py  lint.ps1  probe-display-affinity.ps1  profile-wpa.ps1  run.ps1  setup-new-distro.sh  test.ps1
scripts/capture-probe/: README.md  index.html  server.py
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: answer.json  default.json  manager.json
src-tauri/src/: aec.rs  agent.rs  alloc_counter.rs  audio.rs  backend.rs  capture.rs  claude.rs  clipboard.rs  cloud_stt.rs  commands.rs  context_meter.rs  crashlog.rs  dtln.rs  error.rs  export.rs  lang.rs  latency.rs  lib.rs  main.rs  metrics.rs  secrets.rs  storage.rs  stt.rs  telemetry.rs  transcriber.rs  tts.rs  vad.rs
