[package]
name = "gimme-a-chance"
version = "0.1.0"
edition = "2021"
description = "Real-time interview copilot powered by whisper-rs + Claude Code"

[lib]
name = "gimme_a_chance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
ringbuf = "0.4"
whisper-rs = "0.14"
bytemuck = { version = "1", features = ["derive"] }
hound = "3"
chrono = "0.4"
dirs-next = "2"
