[package]
name = "gimme-a-chance"
version = "0.1.0"
edition = "2021"
description = "Real-time interview copilot powered by whisper-rs + Claude Code"

[lib]
name = "gimme_a_chance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
ringbuf = "0.4"
whisper-rs = "0.16"
bytemuck = { version = "1", features = ["derive"] }
hound = "3"
chrono = "0.4"
dirs-next = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these common pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Opt-in restriction lints (not in `all` or `pedantic`)
let_underscore_must_use = "warn"
