[package]
name = "gimme-a-chance"
version = "0.1.0"
edition = "2021"
description = "Real-time interview copilot powered by whisper-rs + OpenAI/Groq"

[lib]
name = "gimme_a_chance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
# API mode: HTTP client (native-tls = schannel on Windows, no OpenSSL needed).
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
# Vision feature: screen capture (xcap → DXGI Desktop Duplication on Windows),
# in-memory resize + JPEG encode (image crate), and base64 for the data: URL.
xcap = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
# Secrets: in-memory protection (SecretString) + at-rest OS keyring.
secrecy = "0.8"
keyring = { version = "3", features = ["windows-native"] }
# Audio playback for the "simulate interviewer" self-test loop (decodes WAV, plays
# to the default output device so loopback capture can pick it up).
rodio = "0.20"
# On-device STT (Parakeet offline + streaming Nemotron online) + Kokoro TTS via
# the OFFICIAL k2-fsa Rust bindings, behind the `sherpa` feature. Downloads
# prebuilt native libs from the sherpa-onnx releases. `shared` (DLLs) and not
# `static`: the static prebuilts are /MT (static CRT, LIBCMT) and multiply-define
# CRT symbols against our /MD whisper.cpp objects (LNK1169). Replaced the
# deprecated/archived `sherpa-rs` crate, whose build script force-linked msvcrtd
# into Windows debug builds (mixed-CRT aborts — see the repo CLAUDE.md).
sherpa-onnx = { version = "1.13", optional = true, default-features = false, features = ["shared"] }
cpal = "0.15"
ringbuf = "0.4"
whisper-rs = "0.16"
# Acoustic Echo Cancellation: a pure-Rust port of WebRTC's AEC3. In "both"
# capture the interviewer's audio leaks from the headset earpiece into the mic;
# AEC3 cancels it using the loopback as the reference signal. Pure Rust (rustfft
# + num-complex), so unlike `webrtc-audio-processing` it builds on Windows.
# Gated under `sherpa` (only wired into the on-device streaming path for now).
aec3 = { version = "0.3", optional = true }
# DTLN-aec echo cancellation: a deep-learning AEC (Microsoft AEC Challenge, 3rd
# place) that preserves the user's voice during double-talk far better than the
# classic linear+suppressor AEC3. Models run on `tract` — a PURE-RUST ONNX
# runtime — so no native onnxruntime (which would clash with sherpa's). `realfft`
# does the 512-pt STFT the DTLN preprocessing needs.
tract-onnx = { version = "0.23", optional = true }
realfft = { version = "3", optional = true }
# Lock-free channel to route the loopback audio (the AEC reference) from the
# interviewer pipeline thread to the mic pipeline thread. Kept non-optional so
# the `AecEnd` plumbing compiles on every build; only the AEC3 engine is gated.
crossbeam-channel = "0.5"
bytemuck = { version = "1", features = ["derive"] }
hound = "3"
chrono = "0.4"
dirs-next = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-flame = { version = "0.2", optional = true }
tracing-tracy = { version = "0.11", optional = true }
assert_no_alloc = "1"
hdrhistogram = "7"
uuid = { version = "1", features = ["v4", "serde"] }
webrtc-vad = "0.4"
dhat = { version = "0.3", optional = true }
mimalloc = { version = "0.1", optional = true, default-features = false }

[features]
flame = ["dep:tracing-flame"]
tracy = ["dep:tracing-tracy"]
# Local on-device models via sherpa-onnx: STT (Parakeet offline, Nemotron
# streaming) and Kokoro TTS. Gated because it links native libs + needs models
# downloaded. The default build stays pure-cloud (whisper-rs STT + OpenAI TTS).
# Activate with: cargo build --features sherpa  (after scripts/fetch-models.ps1)
sherpa = ["dep:sherpa-onnx", "dep:aec3", "dep:tract-onnx", "dep:realfft"]
# DIY heap profiler: wraps the system allocator and counts bytes allocated/freed,
# plus a 16-bucket logarithmic histogram of alloc sizes and peak-live tracking.
# Mutually exclusive with the default `assert_no_alloc` guard (only one
# `#[global_allocator]` allowed). Activate with: cargo build --features counting-alloc
counting-alloc = []
# Swap the inner allocator wrapped by `CountingAllocator` from `std::alloc::System`
# (HeapAlloc on Windows) to mimalloc. Works WITH `counting-alloc` — the histogram
# still tracks, just underneath a different allocator. Use both to A/B compare.
# Without `counting-alloc`, `mimalloc` alone just replaces the global allocator.
# Activate with: cargo build --features "counting-alloc mimalloc"
mimalloc = ["dep:mimalloc"]
# Full heap profiler with per-allocation call stacks. Writes logs/dhat-heap.json
# on app exit; view at https://nnethercote.github.io/dh_view/dh_view.html
# Mutually exclusive with `counting-alloc` and `assert_no_alloc`.
# Activate with: cargo build --features dhat-heap
dhat-heap = ["dep:dhat"]

# DTLN-aec runs two LSTM models ~125x/second; unoptimized (debug) tract can't
# keep up with real time, so the mic pipeline would lag. Build the tract compute
# crates with optimizations even in dev (same trick as whisper-rs's RelWithDeb).
[profile.dev.package.tract-core]
opt-level = 3
[profile.dev.package.tract-linalg]
opt-level = 3
[profile.dev.package.tract-onnx]
opt-level = 3
[profile.dev.package.tract-hir]
opt-level = 3
[profile.dev.package.realfft]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3

[lints.rust]
# `deny` instead of `forbid` so modules that legitimately need it (like the
# allocator implementation) can opt in with `#![allow(unsafe_code)]`.
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these common pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Opt-in restriction lints (not in `all` or `pedantic`)
let_underscore_must_use = "warn"
